start my project

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Ahmedrashed1619.github.io/Zari-Falcon/",
   "name": "zari-sales-website",
   "version": "0.1.0",
   "private": true,
