--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^4.0.0",
     "joi": "^17.6.4",
     "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
