--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
+    "google-map-react": "^2.2.0",
     "joi": "^17.6.4",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
