--- a/package.json
+++ b/package.json
@@ -1,27 +1,41 @@
 {
-  "homepage": "https://Ahmedrashed1619.github.io/Zari-Falcon/",
+  "homepage": "https://ahmedrashed1619.github.io/Zari-Falcon/",
   "name": "zari-sales-website",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.18.1"
+  },
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.2",
     "aos": "^2.3.4",
-    "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
+    "apexcharts": "^3.36.3",
+    "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "gh-pages": "^4.0.0",
-    "google-map-react": "^2.2.0",
-    "joi": "^17.6.4",
+    "google-maps-react": "^2.0.6",
+    "joi": "^17.7.0",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.2.0",
     "react-owl-carousel": "^2.3.3",
-    "react-router-dom": "^6.4.2",
+    "react-paginate": "^8.1.4",
+    "react-places-autocomplete": "^7.3.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.6.1",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
   },
@@ -48,7 +62,8 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version"
     ]
   }
 }
