--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "file-saver": "^2.0.5",
     "gh-pages": "^4.0.0",
     "google-maps-react": "^2.0.6",
     "joi": "^17.7.0",
@@ -28,6 +29,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-owl-carousel": "^2.3.3",
